g2p_theme/static/src/css/style.css
@font-face {
    font-family: "Roboto";
    src: url("fonts/Roboto-Regular.woff") format("woff");
    font-weight: 400;
}

@font-face {
    font-family: "Roboto";
    src: url("fonts/Roboto-Bold.woff") format("woff");
    font-weight: bold;
}

@font-face {
    font-family: "Roboto";
    src: url("fonts/Roboto-BoldItalic.woff") format("woff");
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: "Roboto";
    src: url("fonts/Roboto-Italic.woff") format("woff");
    font-style: italic;
    font-weight: 400;
}
@font-face {
    font-family: "Roboto";
    src: url("fonts/Roboto-Medium.woff") format("woff");
    font-style: medium;
    font-weight: 500;
}

body {
    font-family: Roboto;
}

.o_main_navbar {
    background-color: #121111 !important;
}

.o_main_navbar .o_menu_sections .o_nav_entry,
.o_main_navbar .o_menu_sections .dropdown-toggle {
    background-color: #121111 !important;
}

.o_menu_sections {
    background-image: url("/g2p_theme/static/src/img/openg2p-white.png");
    background-repeat: no-repeat;
    background-position-y: center;
    background-position-x: 60%;
    background-size: 120px;
}

@media screen and (max-width: 1260px) {
    .o_menu_sections {
        background-position-x: 80% !important;
    }
}

@media screen and (max-width: 1120px) {
    .o_menu_sections {
        background-position-x: 100% !important;
    }
}

@media screen and (max-width: 960px) {
    .o_menu_sections {
        background-image: none !important;
    }
}

.o_notification_counter {
    background-color: #e27d21 !important;
}

.o_MessagingMenu_counter {
    background-color: #e27d21 !important;
}

.breadcrumb .breadcrumb-item a {
    color: #e27d21 !important;
    font: normal normal medium 18px/24px Roboto;
}

.breadcrumb-item + .breadcrumb-item::before {
    color: #202528;
}

.breadcrumb .active .text-muted {
    font: normal normal medium 18px/24px Roboto;
    color: #202528 !important;
}

.btn-primary,
.btn-primary:hover {
    color: #fff;
    background-color: #2a477a;
    border-color: #2a477a;
}

.btn-primary:focus {
    box-shadow: none !important;
}

.o_list_button_add,
.o_form_button_save,
.o_form_button_edit,
.o_list_button_save,
.o_list_button_add_program,
.o_list_button_add:hover,
.o_form_button_save:hover,
.o_form_button_edit:hover,
.o_list_button_save:hover,
.o_list_button_add_program:hover {
    background: #e27d21 0% 0% no-repeat padding-box !important;
    border-radius: 4px !important;
    border: 1px solid #e27d21 !important;
    color: #ffffff !important;
    margin-right: 3px;
}

.o_list_button_add:focus,
.o_form_button_save:focus,
.o_form_button_edit:focus,
.o_list_button_save:focus,
.o_list_button_add_program:focus {
    box-shadow: none !important;
}

.btn-secondary {
    margin-left: 10px;
}

.o_form_buttons_view .o_form_button_create,
.o_form_buttons_view .o_form_button_create:active,
.o_form_button_cancel,
.o_list_button_discard,
.o_list_button_discard:hover,
.o_form_button_cancel:active,
.o_form_button_cancel:hover {
    background: #ffffff 0% 0% no-repeat padding-box !important;
    border: 1px solid #e27d21 !important;
    border-radius: 4px !important;
    color: #e27d21 !important;
}

.o_form_buttons_view .o_form_button_create:focus,
.o_form_button_cancel:focus,
.btn-warning:focus,
.o_list_button_discard:focus,
.o_technical_modal .modal-footer .btn-secondary:focus {
    box-shadow: none !important;
}
.modal-content,
main {
    overflow: auto !important;
}
.o_form_buttons_view .o_form_button_create:focus-visible,
.o_form_button_cancel:focus-visible,
.btn-warning:focus-visible,
.o_technical_modal .modal-footer .btn-secondary:focus-visible {
    outline: none !important;
}

.o_cp_action_menus .dropdown-toggle,
.o_cp_action_menus .dropdown-toggle:active {
    color: #e27d21 !important;
}

.o_form_sheet_bg .o_form_sheet {
    background: #ffffff 0% 0% no-repeat padding-box;
    border-radius: 10px;
    opacity: 1;
}

.oe_stat_button .o_button_icon {
    color: #2a477a !important;
}

.oe_stat_button .o_stat_text {
    color: #212529;
}

.o_notebook_headers .nav-tabs .nav-item a {
    color: #212529;
    border-bottom: 1px;
}

.o_notebook_headers .nav-item .active {
    background: #2a477a 0% 0% no-repeat padding-box !important;
    border: 2px solid #2a477a;
    border-radius: 4px 4px 0px 0px;
    color: #ffffff !important;
}

.o_notebook_headers .nav-item a:hover {
    border-color: #2a477a !important;
}

.o_notebook_headers .nav-tabs {
    border-bottom-color: #2a477a;
    border-bottom-width: 3px;
}

.o_statusbar_buttons button {
    margin-right: 8px !important;
}

.o_statusbar_buttons .btn-success {
    background: #28a745 !important;
    border: 1px solid #28a745 !important;
    border-radius: 4px !important;
    min-width: 90px;
}

.o_list_view .o_field_x2many_list_row_add a,
.o_list_view .o_field_x2many_list_row_add a:focus {
    color: #e27d21 !important;
}

.o_list_view .o_list_table .o_field_x2many_list_row_add a:active {
    color: #e27d21 !important;
}

.custom-control-input:checked ~ .custom-control-label::before {
    color: #fff;
    border-color: #2a477a;
    background-color: #2a477a;
}

.custom-radio .custom-control-input:checked ~ .custom-control-label::after {
    border-radius: 50%;
    border-color: #2a477a;
    background-color: #2a477a;
}

.o_quick_editable a,
.o_quick_editable > span {
    color: #e27d21 !important;
}

.o_field_invalid,
.o_required_modifier {
    --o-input-border-color: #2a477a;
}

.o_required_modifier.o_input,
.o_required_modifier .o_input {
    background: #f5f9ff 0% 0% no-repeat padding-box !important;
    box-shadow: 0px 3px 6px #6767671a !important;
    border: 1px solid #2a477a !important;
    border-radius: 6px;
    opacity: 1;
}

.o_field_invalid.o_form_label:not(:focus-within) {
    color: #2a477a !important;
}

.o_form_view .o_form_statusbar .o_statusbar_status .o_arrow_button.btn-primary.disabled {
    border: 0px !important;
    border-radius: 0px !important;
    background: #dfe9f8 !important;
    color: #2a477a !important;
}

.o_form_view .o_form_statusbar .o_statusbar_status .o_arrow_button.btn-primary.disabled:after,
.o_form_view .o_form_statusbar .o_statusbar_status .o_arrow_button.btn-primary.disabled:before {
    border-left-color: #dfe9f8 !important;
}

.o_stat_info .o_stat_value {
    color: #212529 !important;
}

.btn-success {
    background: #2a477a !important;
    border: 1px solid #2a477a !important;
    border-radius: 4px;
    opacity: 1;
}

.btn-primary:disabled {
    background: #bcbcbc 0% 0% no-repeat padding-box !important;
    border: 1px solid #bcbcbc !important;
}

.btn-success:disabled {
    background: #bcbcbc 0% 0% no-repeat padding-box !important;
    border: 1px solid #bcbcbc !important;
    border-radius: 4px;
    opacity: 1;
}

.btn-success:focus {
    box-shadow: none !important;
}

.o_horizontal_separator {
    color: #2a477a !important;
}

.o_badge_cell .o_field_badge {
    border-radius: 4px;
    opacity: 1;
    min-width: 71px;
    height: 19px;
    text-align: center;
    letter-spacing: 0px;
}

.bg-primary-light {
    color: #3e5463;
    background-color: #dce3e8 !important;
}

.bg-success-light {
    color: #075e45;
    background-color: #c7ebd1 !important;
}

.o_PartnerImStatusIcon_icon.o-online,
.o_ChatterTopbar_button,
.o_ChatterTopbar_button:hover,
.o_FollowerListMenu_buttonFollowers,
.o_external_button {
    color: #2a477a !important;
}

.o_notification {
    border-radius: 6px !important;
}

.o_notification_manager .o_notification .o_notification_body {
    padding-left: 20px;
    padding-top: 14px;
    padding-bottom: 15px;
}

.o_notification_manager .bg-success .o_notification_body,
.o_notification_manager .bg-info .o_notification_body {
    background: #66ad5a !important;
}

.o_notification_manager .bg-danger .o_notification_body {
    background: #de514c !important;
}

.o_notification_manager .bg-warning .o_notification_body {
    background: #ed9834 !important;
}

.o_notification_close,
.o_notification_close:hover {
    color: #ffffff !important;
    opacity: 1;
    font-weight: 100;
    text-shadow: none;
}

.o_notification_close:focus {
    outline: none;
}

.o_search_panel .o_search_panel_category .o_search_panel_section_icon {
    color: #2a477a;
}

.o_field_number .o_input {
    border: none !important;
}

.o_field_selector_popover_header,
.o_field_selector_popover_footer,
.o_field_selector_popover_header .o_field_selector_popover_option:hover {
    background: #2a477a !important;
}

.o_form_view span.o_field_translate {
    display: none;
}

.btn-danger,
.btn-danger:hover {
    color: #fff;
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 4px !important;
    min-width: 90px;
}

.btn-danger:focus {
    box-shadow: none !important;
}

.o_inner_group .o_field_number span {
    color: #1f1f1f !important;
}

.o_domain_selector .o_domain_add_first_node_button {
    background: #2a477a 0% 0% no-repeat padding-box !important;
    border-radius: 4px !important;
    border: 1px solid #2a477a !important;
}

.o_technical_modal .modal-footer .btn-secondary {
    background: #ffffff 0% 0% no-repeat padding-box !important;
    border: 1px solid #2a477a !important;
    border-radius: 4px !important;
    min-width: 90px;
    height: 31px;
    color: #2a477a !important;
}

.btn-warning {
    background: #ffffff 0% 0% no-repeat padding-box !important;
    border: 1px solid #2a477a !important;
    border-radius: 4px !important;
    min-width: 90px;
    color: #2a477a !important;
}

.modal-footer .btn-primary {
    background: #2a477a 0% 0% no-repeat padding-box !important;
    border: 1px solid #2a477a !important;
    border-radius: 4px !important;
    min-width: 90px;
    height: 31px;
    color: #ffffff !important;
}

.info-message {
    color: #ed9834;
}

